--- a/src/components/Header/AddButton/AddButton.css
+++ b/src/components/Header/AddButton/AddButton.css
@@ -1,4 +1,5 @@
 .AddButton {
+  cursor: pointer;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -42,8 +43,6 @@
   right: 20.48%;
   top: 20%;
   bottom: 20%;
-
-  font-family: IBM Plex Sans;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
