--- a/src/components/Header/FeedButton/FeedButton.css
+++ b/src/components/Header/FeedButton/FeedButton.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   padding: 8px 34px;
-
+  cursor: pointer;
   position: absolute;
   width: 167px;
   height: 40px;
@@ -46,8 +46,6 @@
   right: 20.36%;
   top: 20%;
   bottom: 20%;
-
-  font-family: IBM Plex Sans;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
