--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,35 @@
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  outline: none;
+  box-sizing: border-box;
+  /* font-family: 'Roboto', -apple-system, system-ui, sans-serif; */
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+html {
+  font-size: 18px;
+}
+
+body {
+  /* max-width: 100vw; */
+  color: #1E2022;
+}
+
+button {
+  background-color: unset;
+  border: 0;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
 body {
   margin: 0;  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,9 +38,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #E5E5E5; 
+  box-sizing: border-box;  
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
