--- a/src/components/Header/FeedButton/FeedButton.css
+++ b/src/components/Header/FeedButton/FeedButton.css
@@ -63,3 +63,34 @@
   flex-grow: 0;
   margin: 0px 15px;
 }
+
+@media (max-width: 1024px) {
+  .FeedButton {
+    left: 35%;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 812px) {
+  .FeedButton {
+    top: auto;
+    /* height: 5vh; */
+    height: 30px;
+    width: 38%;
+    z-index: 1;
+    bottom: 3%;
+    position: fixed;
+    left: 7%;
+  }
+
+  .feed-content {
+    display: none;
+  }
+
+  .display-greed {
+    width: 30px;
+  }
+
+  .feed-img {
+    width: 18px
+  }
+}
