--- a/src/components/AddNote/Gallery.css
+++ b/src/components/AddNote/Gallery.css
@@ -1,46 +1,51 @@
-.add-note-gallery-container {
-    grid-gap: 0;
+.add-note--container {
+    grid-gap: 1% 0;
     display: grid;
     grid-template-columns: repeat(4, 25%);
-    grid-template-rows: repeat(4, 5vw);
+    grid-template-rows: repeat(4, 10vw);
 }
 
-.gallery-img {
+.-img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
-.gallery-item {
+.-item {
     width: 85%;
     cursor: pointer;
+    transition: 0.2s;
 }
 
-.gallery-item-1 {
+.-item:hover {
+    transform: scale(1.08);
+}
+
+.-item-1 {
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 3;
 }
-.gallery-item-2 {
+.-item-2 {
     grid-column-start: 3;
     grid-column-end: 5;
     grid-row-start: 1;
     grid-row-end: 2;
 }
-.gallery-item-3 {
+.-item-3 {
     grid-column-start: 3;
     grid-column-end: 5;
     grid-row-start: 2;
     grid-row-end: 3;
 }
-.gallery-item-4 {
+.-item-4 {
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 3;
     grid-row-end: 5;
 }
-.gallery-item-5 {
+.-item-5 {
     grid-column-start: 3;
     grid-column-end: 5;
     grid-row-start: 3;
@@ -48,5 +53,7 @@
 }
 
 .chosenImg {
-    border: 1px solid red;
+    -moz-box-shadow: 0px 0px 5px 0px #000;
+    -webkit-box-shadow: 0px 0px 5px 0px #000;
+    box-shadow: 0px 0px 5px 0px #000;
 }
