--- a/src/components/ModalContainer/ModalContainer.css
+++ b/src/components/ModalContainer/ModalContainer.css
@@ -24,7 +24,6 @@
   .modal-img {
     width: 500px;
     height: 750px;
-    background-image: url(https://images.pexels.com/photos/5103756/pexels-photo-5103756.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
   }
 
   .modal-descr {
@@ -117,4 +116,58 @@
   font-size: 24px;
   line-height: 28px;
   color: #1e2022;
+}
+
+@media (min-width: 320px) and (max-width: 812px) {
+  
+  .ModalContainer {
+    width: 100%;
+    padding: 0;
+    overflow: hidden;
+    margin: auto
+  }
+
+  .modal-header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .modal {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    border-radius: 0;
+  }
+
+  .modal-flex {
+    padding: 0;
+  }
+
+  .modal-left {
+    font-size: 1.2em;
+  }
+
+  .modal-header {
+    padding: 0;
+    padding: 0 5%;
+  }
+
+  .modal-date {
+    padding-left: 15%;
+    font-size: 0.9em;
+  }
+
+  .modal-img {
+    background-size: contain;
+    width: 100%;
+    height: 37vh;
+    border-radius: 12px;
+  }
+
+  .close-group {
+    padding: 0;
+    position: absolute;
+    top: 2%;
+    right: 5%;
+  }
 }
