--- a/src/components/Notes/Note/Note.css
+++ b/src/components/Notes/Note/Note.css
@@ -1,14 +1,12 @@
 @media (max-width: 12450px) {
-  .Note {
-    width: 325px;
+  .note-container {
     height: 280px;
-    margin-top: 20px;
     border-radius: 12px;
     background-color: white;
     box-sizing: border-box;
   }
 
-  .Note:hover {
+  .note-container:hover {
     cursor: pointer;
   }
 
@@ -23,13 +21,18 @@
     padding-right: 14px;
   }
 
+  .note-footer::after {
+    content: ' ';
+    width: 100%
+  }
+
   .note-title-group {
     padding-top: 12px;
   }
 }
 
 @media (max-width: 1024px) {
-  .Note {
+  .note-container {
     width: 422px;
     height: 364px;
     margin-top: 20px;    
@@ -72,13 +75,21 @@
   align-items: center;
 }
 
+.note-container {
+  transition: 0.2s;
+}
+
+.note-container:hover {
+  transform: scale(1.02);
+}
+
 .note-flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.note-title {
+.note__title {
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
@@ -86,7 +97,7 @@
   color: #1e2022;
 }
 
-.note-date {
+.note__date {
   font-style: normal;
   font-weight: 300;
   font-size: 12px;
@@ -94,10 +105,46 @@
   color: #1e2022;
 }
 
-.note-descr {
+.note__descr {
   font-style: normal;
   font-weight: 300;
   font-size: 14px;
   line-height: 16px;
   padding-top: 6px;
+}
+
+@media (min-width: 320px) and (max-width: 812px) {
+
+  .note-container {
+    height: 45vh;
+    width: 100%;
+  }
+
+  .note-container > div {
+    position: relative;
+  }
+
+  .note-footer {
+    position: absolute;
+    top: auto;
+    bottom: 0;
+    width: 100%;
+  }
+
+  .note-flex {
+    margin-bottom: 1%;
+    font-size: 1.2em;
+  }
+
+  .note__title {
+    font-size: 0.8em;
+  }
+
+  .note__date {
+    font-size: 0.8em;
+  }
+
+  .note__descr {
+    font-size: 0.9em;
+  }
 }
